--- a/Rouster/Base.lproj/Main.storyboard
+++ b/Rouster/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="JdR-bx-IGB">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -16,9 +17,9 @@
                     <view key="view" contentMode="scaleToFill" id="qQa-iN-OEz">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.73147533669999998" green="0.80463199460000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Instructions" id="RYu-Vx-Zd6"/>
+                    <tabBarItem key="tabBarItem" title="INSTRUCTIONS" image="Instructions" selectedImage="Instructions" id="RYu-Vx-Zd6"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BpG-UZ-WeI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -35,9 +36,9 @@
                     <view key="view" contentMode="scaleToFill" id="qDN-45-t3o">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.73147533669999998" green="0.80463199460000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Dashboard" id="57d-Pm-0b6"/>
+                    <tabBarItem key="tabBarItem" title="STATS" image="Dashboard" selectedImage="Dashboard" id="57d-Pm-0b6"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XDr-4d-azc" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -90,7 +91,7 @@
                                 <color key="shadowColor" red="0.16078431900000001" green="0.8980392814" blue="0.18431372939999999" alpha="1" colorSpace="deviceRGB"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.73147533669999998" green="0.80463199460000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="eIX-mf-B46" firstAttribute="leading" secondItem="bID-KU-DyS" secondAttribute="leading" constant="229" id="0AI-Ll-b48"/>
                             <constraint firstItem="eIX-mf-B46" firstAttribute="top" secondItem="PCL-in-h24" secondAttribute="bottom" constant="38" id="1Gi-3v-mTo"/>
@@ -105,7 +106,7 @@
                             <constraint firstItem="CTQ-ex-EU0" firstAttribute="centerX" secondItem="PCL-in-h24" secondAttribute="centerX" id="qcQ-lF-S1g"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Alarm" id="O1n-cf-WDk"/>
+                    <tabBarItem key="tabBarItem" title="ALARM" image="Alarm" selectedImage="Alarm" id="O1n-cf-WDk"/>
                     <connections>
                         <outlet property="commitmentLabel" destination="CTQ-ex-EU0" id="8ZM-TA-rrm"/>
                         <outlet property="stepsLabel" destination="eIX-mf-B46" id="sSh-ve-4wM"/>
@@ -137,4 +138,9 @@
             <point key="canvasLocation" x="-102" y="953"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Alarm" width="21" height="21"/>
+        <image name="Dashboard" width="21" height="21"/>
+        <image name="Instructions" width="21" height="21"/>
+    </resources>
 </document>
